added future cities

--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wk3Day1</title>
 </head>
 <body>
-    
-    
+    <h1></h1>
+    <h3></h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi voluptas repellendus sint doloremque repellat aut beatae aspernatur. Rerum maxime cupiditate, tempore nemo veniam sed cum aperiam dolor quam rem quaerat?
+    Illo quas, quidem ea sint debitis, aperiam quam, natus veniam rem ratione numquam doloribus error deleniti incidunt ab nam possimus sed ad repudiandae consequatur. Vel impedit tenetur ducimus autem accusamus?
+    Necessitatibus hic ipsa a corrupti, iusto veniam alias provident modi cumque ad non doloremque dolorum consequatur, culpa possimus explicabo commodi totam saepe harum recusandae. Laudantium optio possimus in magnam impedit!</p>
+    <ul>
+        <li>Korea</li>
+        <li>Germany</li>
+        <li>Japan</li>
+    </ul>
+    <ol>
+        <li>Seoul</li>
+        <li>Tokyo</li>
+        <li>Kyoto</li>
+        <li>Shibuya</li>
+    </ol>
 </body>
 </html>
